force-app/main/default/objects/ESP_Asset__c/ESP_Asset__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : Alternative object to hold Asset information as CPQ does not allow Service Cloud to create Asset for each Entitlement (based on Account and Product).</description>
    <label>ESP Asset</label>
    <nameField>
        <label>ESP Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ESP Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>