force-app/main/default/objects/ESP_Asset__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ESP Assets</relationshipLabel>
    <relationshipName>ESP_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>