force-app/main/default/objects/ESP_Asset__c/fields/Has_Active_Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Has_Active_Entitlements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Active Entitlements?</label>
    <type>Checkbox</type>
</CustomField>