force-app/main/default/objects/ESP_Asset__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Product2.Description</field>
            <operation>contains</operation>
            <value>GRID</value>
        </filterItems>
        <filterItems>
            <field>Product2.Description</field>
            <operation>contains</operation>
            <value>DGX</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ESP Assets</relationshipLabel>
    <relationshipName>ESP_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>